--- a/org.tud.inf.st.smags.dsl.ui/build.properties
+++ b/org.tud.inf.st.smags.dsl.ui/build.properties
@@ -3,4 +3,4 @@ source.. = src/,\
            xtend-gen/
 bin.includes = .,\
                META-INF/,\
-               plugin.xml
+               plugin.xml.old
