generation without errors

--- a/org.tud.inf.st.smags.model.edit/plugin.properties
+++ b/org.tud.inf.st.smags.model.edit/plugin.properties
@@ -77,3 +77,10 @@ _UI_SmagsModel_imports_feature = Imports
 _UI_Import_importURI_feature = Import URI
 _UI_TypeBinding_type_feature = Type
 _UI_TypeBinding_implementation_feature = Implementation
+_UI_ComponentType_provides_feature = Provides
+_UI_TypeUse_type = Type Use
+_UI_PrimitiveUse_type = Primitive Use
+_UI_GenericUse_type = Generic Use
+_UI_MetaArchitecture_initialRoleModel_feature = Initial Role Model
+_UI_PrimitiveUse_type_feature = Type
+_UI_GenericUse_type_feature = Type
