first alpha version of single-project java generator functional

--- a/org.tud.inf.st.smags.model.edit/plugin.properties
+++ b/org.tud.inf.st.smags.model.edit/plugin.properties
@@ -84,3 +84,13 @@ _UI_GenericUse_type = Generic Use
 _UI_MetaArchitecture_initialRoleModel_feature = Initial Role Model
 _UI_PrimitiveUse_type_feature = Type
 _UI_GenericUse_type_feature = Type
+_UI_DeploymentOperator_type = Deployment Operator
+_UI_Deployment_type = Deployment
+_UI_CreateInstanceOperator_type = Create Instance Operator
+_UI_ActivateRoleModelOperator_type = Activate Role Model Operator
+_UI_CreateInstanceOperator_instance_feature = Instance
+_UI_ActivateRoleModelOperator_roleModel_feature = Role Model
+_UI_ActivateRoleModelOperator_args_feature = Args
+_UI_Deployment_script_feature = Script
+_UI_MetaArchitecture_namespace_feature = Namespace
+_UI_Architecture_namespace_feature = Namespace
