--- a/org.tud.inf.st.smags.dsl.ui/build.properties
+++ b/org.tud.inf.st.smags.dsl.ui/build.properties
@@ -3,4 +3,5 @@ source.. = src/,\
            xtend-gen/
 bin.includes = .,\
                META-INF/,\
-               plugin.xml.old
+               plugin.xml.old,\
+               icons/
