first attempts towards equinox generator

--- a/org.tud.inf.st.smags.dsl/xtend-gen/org/tud/inf/st/smags/dsl/generator/.gitignore
+++ b/org.tud.inf.st.smags.dsl/xtend-gen/org/tud/inf/st/smags/dsl/generator/.gitignore
@@ -1,3 +1,4 @@
 /.DSLGenerator.java._trace
 /.SingleJavaProjectGenerator.java._trace
 /.EquinoxGenerator.java._trace
+/.JavaProjectGenerator.java._trace
