--- a/org.tud.inf.st.smags.repository/.classpath
+++ b/org.tud.inf.st.smags.repository/.classpath
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+	<classpathentry exported="true" kind="lib" path="lib/gson-2.7.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
+	<classpathentry kind="src" path="src/"/>
 	<classpathentry exported="true" kind="lib" path="lib/javax.servlet-3.0.0.v201112011016.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jetty-continuation-8.1.19.v20160209.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jetty-http-8.1.19.v20160209.jar"/>
@@ -7,8 +11,5 @@
 	<classpathentry exported="true" kind="lib" path="lib/jetty-server-8.1.19.v20160209.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jetty-util-8.1.19.v20160209.jar"/>
 	<classpathentry exported="true" kind="lib" path="lib/jetty-websocket-8.1.19.v20160209.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
-	<classpathentry kind="con" path="org.eclipse.pde.core.requiredPlugins"/>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
