--- a/org.tud.inf.st.smags.repository/pom.xml
+++ b/org.tud.inf.st.smags.repository/pom.xml
@@ -85,5 +85,10 @@
 			<artifactId>jetty-server</artifactId>
 			<version>8.1.19.v20160209</version>
 		</dependency>
+		<dependency>
+			<groupId>com.google.code.gson</groupId>
+			<artifactId>gson</artifactId>
+			<version>2.7</version>
+		</dependency>
 	</dependencies>
 </project>
