--- a/org.tud.inf.st.smags.dsl/xtend-gen/org/tud/inf/st/smags/dsl/generator/.gitignore
+++ b/org.tud.inf.st.smags.dsl/xtend-gen/org/tud/inf/st/smags/dsl/generator/.gitignore
@@ -2,3 +2,6 @@
 /.SingleJavaProjectGenerator.java._trace
 /.EquinoxGenerator.java._trace
 /.JavaProjectGenerator.java._trace
+/.JavaScriptProjectGenerator.java._trace
+/.JavaScriptWebGenerator.java._trace
+/.EquinoxMetaGenerator.java._trace
