--- a/org.tud.inf.st.smags.dsl/build.properties
+++ b/org.tud.inf.st.smags.dsl/build.properties
@@ -3,7 +3,8 @@ source.. = src/,\
            xtend-gen/
 bin.includes = .,\
                META-INF/,\
-               plugin.xml
+               plugin.xml,\
+               resources/
 additional.bundles = org.eclipse.xtext.xbase,\
                      org.eclipse.xtext.common.types,\
                      org.eclipse.xtext.xtext.generator,\
